// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component should render correctly when total items is 0 1`] = `
.c5 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  padding: 0;
  margin: 0;
  display: flex;
  list-style: none;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

.c1>li {
  margin: 0;
}

.c2 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
}

.c2:hover {
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c3 {
  background: #ffffff;
}

.c3>.c4,
.c3 .c4 {
  padding: 0.4rem;
}

.c3 .c4 * {
  fill: #435465;
}

.c3:disabled {
  background: #ffffff;
}

.c3:disabled .c4 * {
  fill: #C7D0D8;
}

.c3:not(:disabled):hover {
  background: #F7F8F9;
}

.c3:not(:disabled):hover .c4 * {
  fill: #303C48;
}

.c3:not(:disabled):active {
  background: #eff2f4;
}

.c3:not(:disabled):active .c4 * {
  fill: #13181D;
}

<div>
  <ul
    class="c0 c1"
    variant="horizontal"
  >
    <li>
      <button
        class="c2 c3"
        disabled=""
        type="button"
      >
        <svg
          class="c4 c5"
          fill="none"
          height="1em"
          title="prev"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
    <li>
      <button
        class="c2 c3"
        disabled=""
        type="button"
      >
        <svg
          class="c4 c5"
          fill="none"
          height="1em"
          title="next"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the default props 1`] = `
.c5 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c5 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c10 {
  position: relative;
  display: inline-flex;
}

.c8 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  display: inline-block;
}

.c11 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 600;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: center;
}

.c0 {
  padding: 0;
  margin: 0;
  display: flex;
  list-style: none;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

.c1>li {
  margin: 0;
}

.c2 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
}

.c2:hover {
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c6 {
  color: #3872D2;
  background: #EBF1FA;
  border-radius: 50%;
}

.c6:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c6 .c7 {
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
}

.c9 {
  color: #435465;
  background: #ffffff;
  border-radius: 50%;
}

.c9:hover {
  color: #303C48;
  background: #F7F8F9;
}

.c9:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c9 .c7 {
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 600;
}

.c3 {
  background: #ffffff;
}

.c3>.c4,
.c3 .c4 {
  padding: 0.4rem;
}

.c3 .c4 * {
  fill: #435465;
}

.c3:disabled {
  background: #ffffff;
}

.c3:disabled .c4 * {
  fill: #C7D0D8;
}

.c3:not(:disabled):hover {
  background: #F7F8F9;
}

.c3:not(:disabled):hover .c4 * {
  fill: #303C48;
}

.c3:not(:disabled):active {
  background: #eff2f4;
}

.c3:not(:disabled):active .c4 * {
  fill: #13181D;
}

<div>
  <ul
    class="c0 c1"
    variant="horizontal"
  >
    <li>
      <button
        class="c2 c3"
        disabled=""
        type="button"
      >
        <svg
          class="c4 c5"
          fill="none"
          height="1em"
          title="prev"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
    <li>
      <button
        class="c2 c6"
        type="button"
      >
        <span
          class="c7 c8"
          textalign="center"
          textcolor="inherit"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="c2 c9"
        type="button"
      >
        <span
          class="c7 c8"
          textalign="center"
          textcolor="inherit"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="c2 c9"
        type="button"
      >
        <span
          class="c7 c8"
          textalign="center"
          textcolor="inherit"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <div
        class="c10"
        id="medly-popover-wrapper"
      >
        <button
          class="c2 c9"
          type="button"
        >
          <h5
            class="c7 c11"
            textalign="center"
            textcolor="inherit"
            textvariant="h5"
            textweight="Medium"
          >
            ...
          </h5>
        </button>
      </div>
    </li>
    <li>
      <button
        class="c2 c9"
        type="button"
      >
        <span
          class="c7 c8"
          textalign="center"
          textcolor="inherit"
        >
          8
        </span>
      </button>
    </li>
    <li>
      <button
        class="c2 c3"
        type="button"
      >
        <svg
          class="c4 c5"
          fill="none"
          height="1em"
          title="next"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the props given 1`] = `
.c7 {
  position: relative;
  display: inline-flex;
}

.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  display: inline-block;
}

.c8 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 600;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: center;
}

.c0 {
  padding: 0;
  margin: 0;
  display: flex;
  list-style: none;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

.c1>li {
  margin: 0;
}

.c2 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
}

.c2:hover {
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c3 {
  color: #3872D2;
  background: #EBF1FA;
  border-radius: 50%;
}

.c3:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c3 .c4 {
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 700;
}

.c6 {
  color: #435465;
  background: #ffffff;
  border-radius: 50%;
}

.c6:hover {
  color: #303C48;
  background: #F7F8F9;
}

.c6:active {
  font-weight: 700;
  color: #13181D;
  background: #eff2f4;
}

.c6 .c4 {
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 600;
}

<div>
  <ul
    class="c0 c1"
    variant="horizontal"
  >
    <li>
      <button
        class="c2 c3"
        type="button"
      >
        <span
          class="c4 c5"
          textalign="center"
          textcolor="inherit"
        >
          1
        </span>
      </button>
    </li>
    <li>
      <button
        class="c2 c6"
        type="button"
      >
        <span
          class="c4 c5"
          textalign="center"
          textcolor="inherit"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        class="c2 c6"
        type="button"
      >
        <span
          class="c4 c5"
          textalign="center"
          textcolor="inherit"
        >
          3
        </span>
      </button>
    </li>
    <li>
      <div
        class="c7"
        id="medly-popover-wrapper"
      >
        <button
          class="c2 c6"
          type="button"
        >
          <h5
            class="c4 c8"
            textalign="center"
            textcolor="inherit"
            textvariant="h5"
            textweight="Medium"
          >
            ...
          </h5>
        </button>
      </div>
    </li>
    <li>
      <button
        class="c2 c6"
        type="button"
      >
        <span
          class="c4 c5"
          textalign="center"
          textcolor="inherit"
        >
          15
        </span>
      </button>
    </li>
  </ul>
</div>
`;
